[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/NPC_1_Satinico.gd" type="Script" id=1]
[ext_resource path="res://sprites/Planeta Satínico/NPC1/Up/NPC_1_U_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Planeta Satínico/NPC1/Right/NPC_1_R_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/Planeta Satínico/NPC1/Down/NPC_1_D_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/Planeta Satínico/NPC1/Left/NPC_1_L_1.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.6318, 10.3521 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle_U",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle_R",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle_D",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle_L",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 34.4529

[node name="NPC_1_Satinico" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 7.5123 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 17.0597, -14.4105 )
frames = SubResource( 2 )
animation = "Idle_U"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 7.5123 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="RayNodeUp" type="RayCast2D" parent="."]

transform/rot = 180.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeDown" type="RayCast2D" parent="."]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeLeft" type="RayCast2D" parent="."]

transform/rot = -90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeRight" type="RayCast2D" parent="."]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Area_NPC1_1_Satinico" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1.10803, -2.21604 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_NPC1_1_Satinico"]

transform/pos = Vector2( -1.10803, -2.21604 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="dialog_bar" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -11.211, 104.266 )
polygon = Vector2Array( -160.637, -72.3599, 175.107, -72.5315, 175.107, 5.90242, -160.637, 5.55907 )
uv = Vector2Array(  )
color = Color( 0.113281, 0.0951385, 0.0951385, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="RichTextLabel" type="RichTextLabel" parent="dialog_bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -144.0
margin/top = -62.0
margin/right = 158.0
margin/bottom = -6.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer" type="Timer" parent="dialog_bar"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="walk_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[connection signal="area_enter" from="Area_NPC1_1_Satinico" to="." method="_on_Area_NPC1_1_Neptanas_area_enter"]

[connection signal="area_exit" from="Area_NPC1_1_Satinico" to="." method="_on_Area_NPC1_1_Neptanas_area_exit"]

[connection signal="timeout" from="dialog_bar/Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="walk_timer" to="." method="_on_walk_timer_timeout"]


